# archinspect

./: .env.example  .gitignore  .pre-commit-config.yaml  ADAPTER_CONFIGURATION.md  Prompt.txt  README.md  extract_repos.py
.claude/: project-context.md
docs/architecture/: hexagonal-architecture.md
docs/architecture/adr/: template.md  (+1 more)
docs/development/: coding-standards.md  development.md  git-workflow.md  performance-guidelines.md  security-guidelines.md  testing-strategy.md
docs/processes/: backup-restore.md  definition-of-done.md  definition-of-ready.md  deployment-guide.md
repo_analyst/: .env.example  .gitignore  CLONE_FEATURE.md  CLONE_UPDATE_FEATURE.md  CONTEXT_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  Makefile  QUICKSTART.md  README.md  manage.py  pyproject.toml  pytest.ini  requirements.txt
repo_analyst/docs/: GITLAB_ADAPTER.md
repo_analyst/src/adapters/git_platform/: __init__.py  clone_service.py  csv_adapter.py  gitlab_adapter.py  gitlab_mirror_adapter.py  gitlab_source_adapter.py  gitlap_adapter.py  markdown_builder.py  mirror_adapter.py  mock_adapter.py
repo_analyst/src/adapters/ki/: __init__.py  http_client.py
repo_analyst/src/adapters/persistence/: __init__.py  admin.py  apps.py  models.py
repo_analyst/src/adapters/persistence/management/commands/: clone_from_gitlab.py  generate_markdown.py  import_from_gitlab.py  import_repositories.py  seed_data.py
repo_analyst/src/adapters/persistence/migrations/: 0001_initial.py  0002_repository_is_flagged.py  0003_serviceendpoint_qualityanalysis.py  0004_promptrun_prompt_text_snapshot.py
repo_analyst/src/adapters/web/: __init__.py  api_urls.py  apps.py  forms.py  serializers.py  ui_urls.py  views.py  viewsets.py
repo_analyst/src/adapters/web/templatetags/: repo_filters.py
repo_analyst/src/application/: backup_service.py  services.py
repo_analyst/src/config/: asgi.py  settings.py  urls.py  wsgi.py
repo_analyst/src/domain/: entities.py  ports.py
repo_analyst/src/infrastructure/: adapter_factory.py
repo_analyst/src/infrastructure/logging/: __init__.py  filters.py  middleware.py
repo_analyst/src/infrastructure/settings/: __init__.py
repo_analyst/src/seeds/: mock_repos.json
repo_analyst/src/tests/: conftest.py
repo_analyst/src/tests/bdd/: __init__.py  import_repositories.feature  test_import_steps.py
repo_analyst/src/tests/integration/: test_gitlab_adapter.py  test_repository_import.py
repo_analyst/src/tests/unit/: test_csv_adapter.py  test_domain_entities.py
repo_analyst/src/ui/templates/: base.html  dashboard.html
repo_analyst/src/ui/templates/applications/: detail.html  form.html  list.html
repo_analyst/src/ui/templates/arts/: detail.html  form.html  list.html
repo_analyst/src/ui/templates/backup/: list.html
repo_analyst/src/ui/templates/kiproviders/: form.html  list.html
repo_analyst/src/ui/templates/promptruns/: detail.html
repo_analyst/src/ui/templates/prompts/: detail.html  form.html  list.html
repo_analyst/src/ui/templates/quality_analyses/: list.html
repo_analyst/src/ui/templates/repositories/: assign.html  detail.html  list.html
repo_analyst/src/ui/templates/service_endpoints/: list.html
testdata/: alle_gitlab_repositories.csv  test_repositories.tsv
